Fixed footer alignment and image stretching on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -163,5 +163,10 @@ ul {
 }
 
 .post-image {
-    max-width: 100%;
+    width: 100%;
+}
+
+.footer {
+    margin: 0px;
+    padding: 0px;
 }
